2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* message-tag-followup.c (construct): Same.

	* message-list.c (message_list_init_images): Same.

	* mail-send-recv.c (build_dialog): Same.

	* mail-mt.c (do_op_status): Same.

	* mail-config-druid.c (evolution_mail_config_wizard_new): Same.

	* em-popup.c (em_popup_create_menu): Same.

	* em-format-html-display.c (efhd_format_prefix): Same.

	* em-format-html.c (efh_format_secure): Same as below.

	* em-folder-tree.c (render_pixbuf): Don't use absolute icon sizes,
	use the e-icon-factory enums.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* em-composer-prefs.h: Removed variables that got re-added with
	the icon-theme patch somehow.

	* em-account-prefs.c: Don't bother keeping global references to
	the enable_pixbuf anymore, since it's unnecessary.

2004-04-19  Michael Terry  <mike@mterry.name>

	* GNOME_Evolution_Mail.server.in.in:
	* em-account-prefs.[ch]:
	* em-composer-prefs.[ch]:
	* em-folder-browser.c:
	* em-folder-tree.c:
	* em-folder-view.c:
	* em-format-html-display.c:
	* em-format-html.[ch]:
	* em-popup.c:
	* mail-component.c
	* mail-config-druid.c:
	* mail-config.glade:
	* mail-mt.c:
	* mail-send-recv.c:
	* message-list.c:
	* message-tag-followup.c:
	* message-tags.glade: Update the mailer to use icon themes through the
	EIconFactory object in e-util

2004-04-16  David Malcolm  <dmalcolm@redhat.com>

	* importers/netscape-importer.c (netscape_import_accounts):
	Removed unused and uninitialised "url" local that gets g_free-ed

2004-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.c (config_write_style): Change the message display
	widget names to match the ones we are using in 1.5 (rather than
	the ones from earlier versions). Fixes bug #57070.

2004-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c: Added a new "message_list_scrolled" signal so
	our users can listen to this event in order to update saved state.
	(message_list_get_scrollbar_position): Simplified.