@@ -1396,42 +1396,42 @@ static BonoboUIVerb emfv_message_verbs[] = {
 	BONOBO_UI_VERB_END
 };
 static EPixmap emfv_message_pixmaps[] = {
-	E_PIXMAP ("/commands/EditCut", "stock_cut", 16),
-	E_PIXMAP ("/commands/EditCopy", "stock_copy", 16),
-	E_PIXMAP ("/commands/EditPaste", "stock_paste", 16),
+	E_PIXMAP ("/commands/EditCut", "stock_cut", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/EditCopy", "stock_copy", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/EditPaste", "stock_paste", E_ICON_SIZE_MENU),
 
-	E_PIXMAP ("/commands/PrintMessage", "stock_print", 16),
-	E_PIXMAP ("/commands/PrintPreviewMessage", "stock_print-preview", 16),
-	E_PIXMAP ("/commands/MessageDelete", "stock_delete", 16),
-	E_PIXMAP ("/commands/MessageUndelete", "stock_undelete", 16),
-	E_PIXMAP ("/commands/MessageCopy", "stock_mail-copy", 16),
-	E_PIXMAP ("/commands/MessageMove", "stock_mail-move", 16),
-	E_PIXMAP ("/commands/MessageReplyAll", "stock_mail-reply-to-all", 16),
-	E_PIXMAP ("/commands/MessageReplySender", "stock_mail-reply", 16),
-	E_PIXMAP ("/commands/MessageForward", "stock_mail-forward", 16),
-	E_PIXMAP ("/commands/MessageApplyFilters", "stock_mail-filters-apply", 16),
-	E_PIXMAP ("/commands/MessageFilterJunk", "stock_spam", 16),
-	E_PIXMAP ("/commands/MessageSearch", "stock_search", 16),
-	E_PIXMAP ("/commands/MessageSaveAs", "stock_save_as", 16),
-	E_PIXMAP ("/commands/MessageMarkAsRead", "stock_mail-open", 16),
-	E_PIXMAP ("/commands/MessageMarkAsUnRead", "stock_mail-unread", 16),
-	E_PIXMAP ("/commands/MessageMarkAsImportant", "stock_mail-priority-high", 16),
-	E_PIXMAP ("/commands/MessageMarkAsJunk", "stock_spam", 16),
-	E_PIXMAP ("/commands/MessageMarkAsNotJunk", "stock_not-spam", 16),
-	E_PIXMAP ("/commands/MessageFollowUpFlag", "stock_mail-flag-for-followup", 16),
+	E_PIXMAP ("/commands/PrintMessage", "stock_print", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/PrintPreviewMessage", "stock_print-preview", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageDelete", "stock_delete", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageUndelete", "stock_undelete", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageCopy", "stock_mail-copy", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMove", "stock_mail-move", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageReplyAll", "stock_mail-reply-to-all", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageReplySender", "stock_mail-reply", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageForward", "stock_mail-forward", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageApplyFilters", "stock_mail-filters-apply", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageFilterJunk", "stock_spam", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageSearch", "stock_search", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageSaveAs", "stock_save_as", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMarkAsRead", "stock_mail-open", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMarkAsUnRead", "stock_mail-unread", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMarkAsImportant", "stock_mail-priority-high", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMarkAsJunk", "stock_spam", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageMarkAsNotJunk", "stock_not-spam", E_ICON_SIZE_MENU),
+	E_PIXMAP ("/commands/MessageFollowUpFlag", "stock_mail-flag-for-followup", E_ICON_SIZE_MENU),
 
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageReplySender", "stock_mail-reply", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageReplyAll", "stock_mail-reply-to-all", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageForward", "stock_mail-forward", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/PrintMessage", "stock_print", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMove", "stock_mail-move", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageCopy", "stock_mail-copy", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageDelete", "stock_delete", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMarkAsJunk", "stock_spam", 24),
-	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMarkAsNotJunk", "stock_not-spam", 24),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageReplySender", "stock_mail-reply", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageReplyAll", "stock_mail-reply-to-all", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageForward", "stock_mail-forward", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/PrintMessage", "stock_print", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMove", "stock_mail-move", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageCopy", "stock_mail-copy", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageDelete", "stock_delete", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMarkAsJunk", "stock_spam", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailMessageToolbar/MessageMarkAsNotJunk", "stock_not-spam", E_ICON_SIZE_LARGE_TOOLBAR),
 
-	E_PIXMAP ("/Toolbar/MailNextButtons/MailNext", "stock_next", 24),
-	E_PIXMAP ("/Toolbar/MailNextButtons/MailPrevious", "stock_previous", 24),
+	E_PIXMAP ("/Toolbar/MailNextButtons/MailNext", "stock_next", E_ICON_SIZE_LARGE_TOOLBAR),
+	E_PIXMAP ("/Toolbar/MailNextButtons/MailPrevious", "stock_previous", E_ICON_SIZE_LARGE_TOOLBAR),
 
 	E_PIXMAP_END
 };
